microservices/deployment/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: forten
  labels:
    name: forten
    purpose: microservices
